--- a/calico-cloud_versioned_docs/version-3.16/visibility/elastic/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/visibility/elastic/overview.mdx
@@ -1,5 +1,5 @@
 ---
-description: Summary of the out-of-box features for Calico Cloud logs.
+description: Summary of the out-of-box features for Calico Enterprise logs.
 ---
 
 # Overview
