--- a/calico/about/kubernetes-training/about-network-policy.mdx
+++ b/calico/about/kubernetes-training/about-network-policy.mdx
@@ -1,13 +1,12 @@
 ---
-description: Learn about network policy!
+description: Learn the basics of Kubernetes and Calico Enterprise network policy
 ---
 
-# About Network Policy
+# What is network policy?
 
 :::note
 
-This guide provides optional background education, including
-education that is not specific to {{prodname}}.
+This guide provides educational material that is not specific to {{prodname}}.
 
 :::
 
@@ -16,7 +15,7 @@ Kubernetes and {{prodname}} provide network policy APIs to help you secure your 
 In this guide you will learn:
 
 - What network policy is and why it is important.
-- The differences between Kubernetes and Calico network policies and when you might want to use each.
+- The differences between Kubernetes and {{prodname}} network policies and when you might want to use each.
 - Some best practices for using network policy.
 
 ## What is network policy?
@@ -67,7 +66,7 @@ workflows and CI/CD processes.
 
 :::note
 
-Note: Calico and Calico Enterprise offer capabilities that can help perimeter firewalls integrate
+Note: {{prodname}} offers capabilities that can help perimeter firewalls integrate
 more tightly with Kubernetes. However, this does not remove the need or value of network policies within the cluster itself.)
 
 :::
@@ -85,73 +84,64 @@ The main features of Kubernetes network policies are:
 
 Kubernetes itself does not enforce network policies, and instead delegates their enforcement to network plugins. Most
 network plugins implement the mainline elements of Kubernetes network policies, though not all implement every feature
-of the specification. (Calico does implement every feature, and was the original reference implementation of Kubernetes
+of the specification. ({{prodname}} does implement every feature, and was the original reference implementation of Kubernetes
 network policies.)
 
 To learn more about Kubernetes network policies, read the [Get started with Kubernetes network
-policy](../network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx) guide.
+policy](kubernetes-network-policy.mdx) guide.
 
-## Calico network policy
+## {{prodname}} network policy
 
 In addition to enforcing Kubernetes network policy, {{prodname}} supports its own
-namespaced [NetworkPolicy](../reference/resources/networkpolicy.mdx) and non-namespaced
-[GlobalNetworkPolicy](../reference/resources/globalnetworkpolicy.mdx) resources, which provide additional
+namespaced [NetworkPolicy](../../reference/resources/networkpolicy.mdx) and non-namespaced
+[GlobalNetworkPolicy](../../reference/resources/globalnetworkpolicy.mdx) resources, which provide additional
 features beyond those supported by Kubernetes network policy. This includes support for:
 
 - policy ordering/priority
 - deny and log actions in rules
-- more flexible match criteria for applying policies and in policy rules, including matching on Kubernetes
-  ServiceAccounts, and (if using Istio & Envoy) cryptographic identity and layer 5-7 match criteria such as HTTP & gRPC URLs.
+- more flexible match criteria for applying policies and in policy rules, including matching on Kubernetes ServiceAccounts
 - ability to reference non-Kubernetes workloads in polices, including matching on
-  [NetworkSets](../reference/resources/networkset.mdx) in policy rules
+  [NetworkSets](../../reference/resources/networkset.mdx) in policy rules
 
-While Kubernetes network policy applies only to pods, Calico network policy can be applied to multiple types of
+While Kubernetes network policy applies only to pods, {{prodname}} network policy can be applied to multiple types of
 endpoints including pods, VMs, and host interfaces.
 
-To learn more about Calico network policies, read the [Get started with Calico network
-policy](../network-policy/get-started/calico-policy/calico-network-policy.mdx) guide.
+To learn more about {{prodname}} network policies, see [Calico network policy](network-policy/get-started/calico-policy/calico-network-policy.mdx) guide.
 
 ## Benefits of using {{prodname}} for network policy
 
 ### Full Kubernetes network policy support
 
-Unlike some other network policy implementations, Calico implements the full set of Kubernetes network policy features.
+Unlike some other network policy implementations, {{prodname}} implements the full set of Kubernetes network policy features.
 
 ### Richer network policy
 
-Calico network policies allow even richer traffic control than Kubernetes network policies if you need it. In addition,
-Calico network policies allow you to create policy that applies across multiple namespaces using GlobalNetworkPolicy
+{{prodname}} network policies allow even richer traffic control than Kubernetes network policies if you need it. In addition,
+{{prodname}} network policies allow you to create policy that applies across multiple namespaces using GlobalNetworkPolicy
 resources.
 
-### Mix Kubernetes and Calico network policy
+### Mix Kubernetes and {{prodname}} network policy
 
-Kubernetes and Calico network policies can be mixed together seamlessly. One common use case for this is to split
+Kubernetes and {{prodname}} network policies can be mixed together seamlessly. One common use case for this is to split
 responsibilities between security / cluster ops teams and developer / service teams. For example, giving the security /
-cluster ops team RBAC permissions to define Calico policies, and giving developer / service teams RBAC permissions to
-define Kubernetes network policies in their specific namespaces. As Calico policy rules can be ordered to be enforced
+cluster ops team RBAC permissions to define {{prodname}} policies, and giving developer / service teams RBAC permissions to
+define Kubernetes network policies in their specific namespaces. As {{prodname}} policy rules can be ordered to be enforced
 either before or after Kubernetes network policies, and can include actions such as deny and log, this allows the
 security / cluster ops team to define basic higher-level more-general purpose rules, while empowering the developer /
 service teams to define their own fine-grained constraints on the apps and services they are responsible for.
 
-For more flexible control and delegation of responsibilities between two or more teams, Calico Enterprise extends this
+For more flexible control and delegation of responsibilities between two or more teams, {{prodname}} Enterprise extends this
 model to provide [hierarchical policy](#hierarchical-policy).
 
-![Example mix of network policy types](/img/calico/example-k8s-calico-policy-mix.svg)
+![Example mix of network policy types](/img/calico-enterprise/example-k8s-calico-policy-mix.svg)
 
 ### Ability to protect hosts and VMs
 
 As {{prodname}} policies can be enforce on host interfaces, you can use them to protect your Kubernetes nodes (not
 just your pods), including for example, limiting access to node ports from outside of the cluster. To learn more, check
-out the {{prodname}} [policy for hosts](../network-policy/hosts/index.mdx) guides.
+out the {{prodname}} [policy for hosts](network-policy/hosts/index.mdx) guides.
 
-### Integrates with Istio
-
-When used with Istio service mesh, {{prodname}} policy engine enforces the same policy model at the host networking
-layer and at the service mesh layer, protecting your infrastructure from compromised workloads and protecting your
-workloads from compromised infrastructure. This also avoids the need for dual provisioning of security at the service
-mesh and infrastructure layers, or having to learn different policy models for each layer.
-
-### Extendable with Calico Enterprise
+### Extendable with {{prodname}}
 
 Calico Enterprise adds even richer network policy capabilities, with the ability
 to specify hierarchical policies, with each team have particular boundaries of trust, and FQDN / domain names in policy
@@ -208,7 +198,7 @@ spec:
 ### Default deny
 
 One approach to ensuring these best practices are being followed is to define [default
-deny](../network-policy/get-started/kubernetes-default-deny.mdx) network policies. These ensure that if no other policy is
+deny](network-policy/get-started/kubernetes-default-deny.mdx) network policies. These ensure that if no other policy is
 defined that explicitly allows traffic to/from a pod, then the traffic will be denied. As a result, anytime a team
 deploys a new pod, they are forced to also define network policy for the pod. It can be useful to use a {{prodname}}
 GlobalNetworkPolicy for this (rather than needing to define a policy every time a new namespace is created) and to
@@ -237,8 +227,8 @@ spec:
 
 ### Hierarchical policy
 
-[Calico Enterprise](https://docs.tigera.io/v3.11/security/tiered-policy) supports hierarchical network policy using policy tiers. RBAC
+[Calico Enterprise](https://docs.tigera.io/calico-enterprise/latest/network-policy/policy-tiers/tiered-policyd-policy.mdx) supports hierarchical network policy using policy tiers. RBAC
 for each tier can be defined to restrict who can interact with each tier. This can be used to delegate trust across
 multiple teams.
 
-![Example tiers](/img/calico/example-tiers.svg)
+![Example tiers](/img/calico-enterprise/example-tiers.svg)
