--- a/calico/about/kubernetes-training/about-networking.mdx
+++ b/calico/about/kubernetes-training/about-networking.mdx
@@ -11,7 +11,7 @@ This guide provides optional background education, not specific to {{prodname}}.
 :::
 
 You can get up and running with Calico by following any of the {{prodname}} [install
-guides](../getting-started/index.mdx) without needing to be a networking expert. Calico hides the complexities for
+guides](/getting-started/index.mdx) without needing to be a networking expert. Calico hides the complexities for
 you. However, if you would like to learn more about networking so you can better understand what is happening under the
 covers, this guide provides a short introduction to some of the key fundamental networking concepts for anyone who is
 not already familiar with them.
@@ -118,7 +118,7 @@ the downsides of:
 
 {{prodname}} networking options are exceptionally flexible, so in general you can choose whether you prefer
 {{prodname}} to provide an overlay network, or non-overlay network. You can read more about this in the {{prodname}}
-[determine best networking option](../networking/determine-best-networking.mdx) guide.
+[determine best networking option](/networking/determine-best-networking.mdx) guide.
 
 ## DNS
 
