--- a/calico/about/kubernetes-training/index.mdx
+++ b/calico/about/kubernetes-training/index.mdx
@@ -1,9 +1,8 @@
 ---
-description: Calico Cloud features.
-hide_table_of_contents: true
+description: Introduction to Kubernetes networking and network policy for beginners. 
 ---
 
-# About
+# Kubernetes networking and policy
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
