--- a/calico/getting-started/kubernetes/rancher.mdx
+++ b/calico/getting-started/kubernetes/rancher.mdx
@@ -2,7 +2,7 @@
 description: Install Calico on a Rancher Kubernetes Engine cluster.
 ---
 
-# Install Calico on a Rancher Kubernetes Engine cluster
+# Rancher Kubernetes Engine (RKE)
 
 ## Big picture
 
