--- a/calico-cloud_versioned_docs/version-3.15/visibility/elastic/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/visibility/elastic/overview.mdx
@@ -1,5 +1,5 @@
 ---
-description: Summary of the out-of-box features for Calico Cloud logs.
+description: Summary of the out-of-box features for Calico Enterprise logs.
 ---
 
 # Overview
@@ -95,6 +95,7 @@ verbs: ['get']
 
 ## Above and beyond
 
+- [Log storage recommendations](/operations/logstorage/log-storage-recommendations)
 - [Configure flow log aggregation](flow/aggregation.mdx)
 - [Audit logs](audit-overview.mdx)
 - [BGP logs](bgp.mdx)
