--- a/calico/about/kubernetes-training/about-kubernetes-egress.mdx
+++ b/calico/about/kubernetes-training/about-kubernetes-egress.mdx
@@ -1,13 +1,12 @@
 ---
-description: Learn about Kubernetes egress!
+description: Learn why you should restrict egress traffic and how to do it.
 ---
 
-# About Kubernetes egress
+# Kubernetes egress
 
 :::note
 
-This guide provides optional background education, including
-education that is not specific to {{prodname}}.
+This guide provides educational material that is not specific to {{prodname}}.
 
 :::
 
@@ -46,14 +45,7 @@ traffic.
 One limitation when using Kubernetes Network Policy to restrict access to specific external resources, is that the external
 resources need to be specified as IP addresses (or IP address ranges) within the policy rules. If the IP addresses
 associated with an external resource change, then every policy that referenced those IP addresses needs to be updated with
-the new IP addresses. This limitation can be circumvented using Calico [Network
-Sets](../network-policy/policy-rules/external-ips-policy.mdx), or Calico Enterprise's support for domain names in policy rules.
-
-In addition to using network policy, service meshes typically allow you to configure which external services each pod
-can access. In the case of Istio, {{prodname}} can be integrated to enforce network policy at the service mesh
-layer, including [L5-7 rules](../network-policy/istio/http-methods.mdx), as another alternative to using IP addresses in rules. To
-learn more about the benefits of this kind of approach, read our [Adopt a zero trust network model for security
-](../network-policy/adopt-zero-trust.mdx) guide.
+the new IP addresses. This limitation can be circumvented using {{prodname}} [Use external IPs or networks rules in policy](network-policy/policy-rules/external-ips-policy.mdx), or Calico Enterprise's support for domain names in policy rules..
 
 Note in addition to everything mentioned so far, perimeter firewalls can also be used to restrict outgoing connections,
 for example to allow connections only to particular external IP address ranges, or external services. However, since
@@ -77,7 +69,7 @@ pod or external service being aware the mapping is happening.
 
 In most clusters this NAT behavior is configured statically across the whole of the cluster. When using
 {{prodname}}, the NAT behavior can be configured at a more granular level for particular address ranges using [IP
-pools](../reference/resources/ippool.mdx). This effectively allows the scope of "non-routable" to be more
+pools](../../reference/resources/ippool.mdx). This effectively allows the scope of "non-routable" to be more
 tightly defined than just "inside the cluster vs outside the cluster", which can be useful in some enterprise deployment
 scenarios.
 
@@ -91,7 +83,7 @@ external entities). For example, so that perimeter firewalls see the connections
 addresses (the egress gateways) rather than from dynamic pod IP addresses they don't understand.
 
 Egress gateways are not a native concept in Kubernetes itself, but are implemented by some Kubernetes network
-implementations and some service meshes. For example, Calico Enterprise provides egress gateway functionality, plus the
+implementations and some service meshes. For example, {{prodname}} provides egress gateway functionality, plus the
 ability to map namespaces (or even individual pods) to specific egress gateways. Perimeter firewalls (or other external
 security entities) can then effectively provide per namespace security controls, even though they do not have visibility
 to dynamic pod IP addresses.
@@ -105,9 +97,7 @@ deployments. In these scenarios, using egress gateways is likely to be a better 
 
 ## Above and beyond
 
-- [Adopt a zero trust network model for security](../network-policy/adopt-zero-trust.mdx)
-- [Use external IPs or networks rules in policy](../network-policy/policy-rules/external-ips-policy.mdx)
-- [Enforce network policy using Istio](../network-policy/istio/app-layer-policy.mdx)
-- [Use HTTP methods and paths in policy rules](../network-policy/istio/http-methods.mdx)
-- [Restrict a pod to use an IP address in a specific range](../networking/ipam/legacy-firewalls.mdx)
-- [Assign IP addresses based on topology](../networking/ipam/assign-ip-addresses-topology.mdx)
+- [Use external IPs or networks rules in policy](/network-policy/policy-rules/external-ips-policy.mdx)
+- [Restrict a pod to use an IP address in a specific range](../../networking/ipam/legacy-firewalls.mdx)
+- [Assign IP addresses based on topology](../../networking/ipam/assign-ip-addresses-topology.mdx)
+- [Egress gateways for Calico Enterprise](https://docs.tigera.io/calico-enterprise/latest/networking/egress/)
