--- a/calico/about/kubernetes-training/about-kubernetes-ingress.mdx
+++ b/calico/about/kubernetes-training/about-kubernetes-ingress.mdx
@@ -1,25 +1,25 @@
 ---
-description: Learn about Kubernetes Ingress!
+description: Learn the different ingress implentations and how ingress and policy interact.
 ---
 
-# About Kubernetes Ingress
+# Kubernetes ingress
 
 :::note
 
-This guide provides optional background education, including
-education that is not specific to {{prodname}}.
+This guide provides education material
+that is not specific to {{prodname}}.
 
 :::
 
 In this guide you will learn:
 
-- What is Kubernetes Ingress?
+- What is Kubernetes ingress?
 - Why use ingress?
 - What are the differences between different ingress implementations?
 - How does ingress and network policy interact?
 - How does ingress and services fit together under the covers?
 
-## What is Kubernetes Ingress?
+## What is Kubernetes ingress?
 
 Kubernetes Ingress builds on top of Kubernetes [Services](about-kubernetes-services.mdx) to provide
 load balancing at the application layer, mapping HTTP and HTTPS requests with particular domains or URLs to Kubernetes
@@ -76,7 +76,7 @@ common approach is use an external network load balancer or service IP advertise
 This minimizes the number of network hops, and retains the client source IP address, which allows network policy to be used
 to restrict access to the ingress pods to particular clients if desired.
 
-![In-cluster ingress](/img/calico/ingress-in-cluster.svg)
+![In-cluster ingress](/img/calico-enterprise/ingress-in-cluster.svg)
 
 ### External ingress solutions
 
@@ -89,7 +89,7 @@ ingress for you. The downsides are a potentially more limited set of features co
 ingress solutions, and the maximum number of services exposed by ingress being constrained by cloud provider specific
 limits.
 
-![External ingress](/img/calico/ingres-external.svg)
+![External ingress](/img/calico-enterprise/ingres-external.svg)
 
 Note that most application load balancers support a basic mode of operation of forwarding traffic to the chosen service
 backing pods via the [node port](about-kubernetes-services.mdx#node-port-services) of the
@@ -120,15 +120,15 @@ over these diagrams if you don't want to dig deeper into how services and ingres
 
 **In-cluster ingress solution exposed as service type `LoadBalancer` with `externalTrafficPolicy:local`**
 
-![In-cluster ingress with NLB local](/img/calico/ingress-in-cluster-nlb-local.svg)
+![In-cluster ingress with NLB local](/img/calico-enterprise/ingress-in-cluster-nlb-local.svg)
 
 **External ingress solution via node ports**
 
-![External ingress via node port](/img/calico/ingress-external-node-ports.svg)
+![External ingress via node port](/img/calico-enterprise/ingress-external-node-ports.svg)
 
 **External ingress solution direct to pods**
 
-![External ingress direct to pods](/img/calico/ingress-external-direct-to-pods.svg)
+![External ingress direct to pods](/img/calico-enterprise/ingress-external-direct-to-pods.svg)
 
 ## Above and beyond
 
