--- a/calico/about/kubernetes-training/about-kubernetes-services.mdx
+++ b/calico/about/kubernetes-training/about-kubernetes-services.mdx
@@ -1,24 +1,23 @@
 ---
-description: Learn about Kubernetes services!
+description: Learn the three main service types and how to use them.
 ---
 
-# About Kubernetes Services
+# Kubernetes services
 
 :::note
 
-This guide provides optional background education, including
-education that is not specific to {{prodname}}.
+This guide provides educational material that is not specific to {{prodname}}.
 
 :::
 
 In this guide you will learn:
 
-- What are Kubernetes Services?
+- What are Kubernetes services?
 - What are the differences between the three main service types and what do you use them for?
 - How do services and network policy interact?
 - Some options for optimizing how services are handled.
 
-## What are Kubernetes Services?
+## What are Kubernetes services?
 
 Kubernetes [Services](https://kubernetes.io/docs/concepts/services-networking/service/) provide a way of abstracting access to a group
 of pods as a network service. The group of pods backing each service is usually defined using a [label selector](https://kubernetes.io/docs/concepts/overview/working-with-objects/labels).
@@ -26,7 +25,7 @@ of pods as a network service. The group of pods backing each service is usually 
 When a client connects to a Kubernetes service, the connection is load balanced to one of the pods backing the service,
 as illustrated in this conceptual diagram:
 
-![Kubernetes Service conceptual diagram](/img/calico/k8s-service-concept.svg)
+![Kubernetes Service conceptual diagram](/img/calico-enterprise/k8s-service-concept.svg)
 
 There are three main types of Kubernetes services:
 
@@ -45,11 +44,11 @@ backing the service may change over time.
 
 In a typical Kubernetes deployment, kube-proxy runs on every node and is responsible for intercepting connections to
 Cluster IP addresses and load balancing across the group of pods backing each service. As part of this process
-[DNAT](about-networking.mdx#nat) is used to map the destination IP address from the Cluster IP to the
+[DNAT](about-networking#nat) is used to map the destination IP address from the Cluster IP to the
 chosen backing pod. Response packets on the connection then have the NAT reverse on their way back to the pod that
 initiated the connection.
 
-![kube-proxy cluster IP](/img/calico/kube-proxy-cluster-ip.svg)
+![kube-proxy cluster IP](/img/calico-enterprise/kube-proxy-cluster-ip.svg)
 
 Importantly, network policy is enforced based on the pods, not the service Cluster IP. (i.e. Egress network policy is
 enforced for the client pod after the DNAT has changed the connection's destination IP to the chosen service backing
@@ -63,13 +62,13 @@ port reserved on each node in the cluster through which the service can be acces
 kube-proxy is responsible for intercepting connections to Node Ports and load balancing them across the pods backing
 each service.
 
-As part of this process [NAT](about-networking.mdx#nat) is used to map the destination IP address and
+As part of this process [NAT](about-networking#nat) is used to map the destination IP address and
 port from the node IP and Node Port, to the chosen backing pod and service port. In addition the source IP address is
 mapped from the client IP to the node IP, so that response packets on the connection flow back via the original node,
 where the NAT can be reversed. (It's the node which performed the NAT that has the connection tracking state needed to
 reverse the NAT.)
 
-![kube-proxy node port](/img/calico/kube-proxy-node-port.svg)
+![kube-proxy node port](/img/calico-enterprise/kube-proxy-node-port.svg)
 
 Note that because the connection source IP address is SNATed to the node IP address, ingress network policy for the
 service backing pod does not see the original client IP address. Typically this means that any such policy is limited to
@@ -86,7 +85,7 @@ integrated with your cluster.
 The service can be accessed from outside of the cluster via a specific IP address on the network load balancer, which by
 default will load balance evenly across the nodes using the service node port.
 
-![kube-proxy load balancer](/img/calico/kube-proxy-load-balancer.svg)
+![kube-proxy load balancer](/img/calico-enterprise/kube-proxy-load-balancer.svg)
 
 Most network load balancers preserve the client source IP address, but because the service then goes via a node port,
 the backing pods themselves do not see the client IP, with the same implications for network policy. As with node
@@ -104,7 +103,7 @@ deployment with standard Top of Rack routers.
 not using Calico as your network plugin then [MetalLB](https://github.com/metallb/metallb) provides similar capabilities that work with a variety of different network
 plugins.
 
-![kube-proxy service advertisement](/img/calico/kube-proxy-service-advertisement.svg)
+![kube-proxy service advertisement](/img/calico-enterprise/kube-proxy-service-advertisement.svg)
 
 ## externalTrafficPolicy:local
 
@@ -119,7 +118,7 @@ only directed to nodes that host at least one pod backing the service. This redu
 between nodes, and perhaps more importantly, to maintain the source IP address all the way to the pod, so network policy
 can restrict specific external clients if desired.
 
-![kube-proxy service advertisement](/img/calico/kube-proxy-service-local.svg)
+![kube-proxy service advertisement](/img/calico-enterprise/kube-proxy-service-local.svg)
 
 Note that in the case of services of type `LoadBalancer`, not all Load Balancers support this mode. And in the case of
 service IP advertisement, the evenness of the load balancing becomes topology dependent. In this case, pod anti-affinity
@@ -129,11 +128,11 @@ deploying the service.
 ## Calico eBPF native service handling
 
 As an alternative to using Kubernetes standard kube-proxy, {{prodname}}'s [eBPF
-dataplane](../operations/ebpf/enabling-ebpf.mdx) supports native service handling. This preserves source IP to
+dataplane](../../operations/ebpf/enabling-ebpf.mdx) supports native service handling. This preserves source IP to
 simplify network policy, offers DSR (Direct Server Return) to reduce the number of network hops for return traffic, and
 provides even load balancing independent of topology, with reduced CPU and latency compared to kube-proxy.
 
-![kube-proxy service advertisement](/img/calico/calico-native-service-handling.svg)
+![kube-proxy service advertisement](/img/calico-enterprise/calico-native-service-handling.svg)
 
 # Above and beyond
 
