Fix egw-dest namespace selectors

--- a/calico-cloud/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-aws.mdx
@@ -925,14 +925,14 @@ spec:
     // callout-for-next-line
     gateway:
       // callout-for-next-line
-      namespaceSelector: "default"
+      namespaceSelector: "projectcalico.org/name == 'default'"
       // callout-for-next-line
       selector: "egress-code == 'blue'"
       // callout-for-next-line
       maxNextHops: 2
   - description: "Gateway to internet"
     gateway:
-      namespaceSelector: "default"
+      namespaceSelector: "projectcalico.org/name == 'default'"
       selector: "egress-code == 'red'"
 ```
 
