--- a/calico-enterprise/networking/egress/troubleshoot.mdx
+++ b/calico-enterprise/networking/egress/troubleshoot.mdx
@@ -169,12 +169,12 @@ spec:
       cidr: 11.0.0.0/8
     description: "Gateway to on prem"
     gateway:
-      namespaceSelector: "default"
+      namespaceSelector: "projectcalico.org/name == 'default'"
       selector: "egress-code == 'blue'"
       maxNextHops: 2
   - description: "Gateway to internet"
     gateway:
-      namespaceSelector: "default"
+      namespaceSelector: "projectcalico.org/name == 'default'"
       selector: "egress-code == 'red'"
 ```
 
