--- a/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-aws.mdx
@@ -895,13 +895,13 @@ EOF
 
 To add AWS Elastic IPs to the egress gateway pods, follow these steps:
 
-- Ensure that either your worker nodes are in a private subnet, or they are using Elastic IPs for their public IP.
+- Ensure that your worker nodes are either in a private subnet, or they are using Elastic IPs for their public IP.
 
   :::warning
-  If your worker nodes are using ["standard" VPC public IPs](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-ip-addressing.html#vpc-public-ipv4-addresses)
-  then, when an Elastic IP is added to an egress gateway, adding the Elastic IP to the node will trigger the
-  node to lose its VPC Public IP.  This is a [property of AWS networking](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html#eip-basics);
-  a node is not allowed to have a VPC public IP and an Elastic IP (though we have found this is only enforced at boot).
+  If your worker nodes are using ["standard" VPC public IPs](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-ip-addressing.html#vpc-public-ipv4-addresses),
+  adding the Elastic IP to the node triggers the node to lose its VPC Public IP. This is because in AWS networking,
+  a node is not allowed to have a VPC public IP and an Elastic IP. However, we have found this is only enforced at
+  boot time.
   :::
 
 - Ensure that your VPC has an [Internet Gateway](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Internet_Gateway.html)
