--- a/calico-cloud/about/about-calico-cloud.mdx
+++ b/calico-cloud/about/about-calico-cloud.mdx
@@ -1,5 +1,5 @@
 ---
-description: A brief description of Calico Cloud, deployment options, and features.
+description: A high-level description of Calico Cloud.
 ---
 
 # About Calico Cloud
@@ -10,22 +10,28 @@ description: A brief description of Calico Cloud, deployment options, and featur
 
 ![calico-cloud](/img/calico/calico-cloud.svg)
 
-Beyond the Kubernetes security features in Calico Enterprise and Calico Open Source, {{prodname}} adds these container security features:
+Beyond the **Kubernetes security** features that you get from Calico Enterprise and Calico Open Source, {{prodname}} adds these **container security** features:
 
-- **Automated image scanning and blocking**
-    Monitor and assess workloads for new and existing CVEs 24/7.
+- **Image vulnerability management**
+    Automated image scanning and blocking so you can monitor and assess workloads for new and existing CVEs 24/7. 
 
 - **Runtime container threat defense**
-    Complete protection against known and zero-day attacks, whether they are network or container-based.
+    Fully-automated protection against known and unknown attacks (network or container-based.    
 
-- **Onboarding training and self-service**
-    Built-in onboarding in Manager UI, hands-on training from Customer Support during trials so you can see your use cases realized in short order, and self-service workshops and training.
+## Best fit
 
-The sweetspot for {{prodname}} is for small teams who need to manage the full spectrum of compliance in a web-based console for novice users.
+The sweetspot for {{prodname}} is small teams who need to manage the full spectrum of compliance in a web-based console. To jumpstart learning for teams, {{prodname}} provides:
+
+- Built-in onboarding in Manager UI
+- Automatic policy recommendations
+- Hands-on training from Customer Support during trials so you can see your use cases realized in short order
+- Self-service workshops and training to speed up adoption
 
 ## Need more info?
 
-- For specific {{prodname}} features, see [Tigera product comparison]()
+- For specific {{prodname}} features, see [Tigera product comparison](/product-comparison.mdx)
 - To connect your cluster to {{prodname}} in 15 minutes, [start a free trial]()
-- For {{prodname}} pricing, see [Calico Cloud pricing](https://www.tigera.io/tigera-products/calico-cloud-pricing/)
-- Not ready to start a trial, but want to know what happens when you connect a cluster, see [Connect a cluster]()
+- [Calico Cloud pricing](https://www.tigera.io/tigera-products/calico-cloud-pricing/)
+- [Connect a cluster to {{prodname}} documentation](/get-started/connect/connect-cluster.mdx)
+- [Image assurance documentation](/image-assurance/scan-image-registries.mdx)
+- [Container threat defense documentation](/threat/container-threat-detection.mdx)
