--- a/calico-cloud/about/about-calico-cloud.mdx
+++ b/calico-cloud/about/about-calico-cloud.mdx
@@ -6,7 +6,7 @@ description: A high-level description of Calico Cloud.
 
 ## What is {{prodname}}?
 
-{{prodname}} is security solution for cloud-native applications running on containers and Kubernetes. It is the SaaS/pay-as-you-go version of Calico Enterprise, which includes the core Calico Open Source networking and network policy.
+{{prodname}} is security solution for cloud-native applications running on containers and Kubernetes. It is the SaaS/pay-as-you-go version of Calico Enterprise, which also includes the core Calico Open Source networking and network policy.
 
 ![calico-cloud](/img/calico/calico-cloud.svg)
 
@@ -33,5 +33,5 @@ The sweetspot for {{prodname}} is small teams who need to manage the full spectr
 - To connect your cluster to {{prodname}} in 15 minutes, [start a free trial]()
 - [Calico Cloud pricing](https://www.tigera.io/tigera-products/calico-cloud-pricing/)
 - [Connect a cluster to {{prodname}} documentation](/get-started/connect/connect-cluster.mdx)
-- [Image assurance documentation](/image-assurance/scan-image-registries.mdx)
+- [Vulnerability management documentation](/image-assurance/scan-image-registries.mdx)
 - [Container threat defense documentation](/threat/container-threat-detection.mdx)
