--- a/calico-cloud/about/product-comparison.mdx
+++ b/calico-cloud/about/product-comparison.mdx
@@ -70,9 +70,10 @@ What is the best fit for you? It depends on your needs. The following table prov
 | iptables                                                     | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | Windows HNS                                                  | <center>&#10003</center> | <center>&#10003</center> | <center>&#10003</center> |
 | VPP                                                          | <center>&#10003</center> |                          |                          |
-| **Images**                                                   |                          |                          |                          |
-| Scan images for vulnerabilities                              |                          | <center>&#10003</center> |                          |
+| **Image vulnerability management**                           |                          |                          |                          |
+| Scan images for vulnerabilities for workloads in Kubernetes cluster |                          | <center>&#10003</center> |                          |
 | Create policy to block vulnerable images from your clusters  |                          | <center>&#10003</center> |                          |
+| Runtime view to assess impact of newly-found vulnerabilities |                          | <center>&#10003</center> |                          |
 | **Observability and troubleshooting**                        |                          |                          |                          |
 | Application level observability and troubleshooting          |                          | <center>&#10003</center> | <center>&#10003</center> |
 | Service Graph                                                |                          | <center>&#10003</center> | <center>&#10003</center> |
