--- a/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-k8s-networking.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-k8s-networking.mdx
@@ -58,7 +58,7 @@ There are lots of different kinds of CNI plugins, but the two main ones are:
 {{prodname}} provides both network and IPAM plugins, but can also integrate and work seamlessly with some other CNI
 plugins, including AWS, Azure, and Google network CNI plugins, and the host local IPAM plugin. This flexibility allows
 you to choose the best networking options for your specific needs and deployment environment. You can read more about
-this in the {{prodname}} [determine best networking option](/networking/determine-best-networking.mdx)
+this in the [Calico Enterprise determine best networking option](https://docs.tigera.io/calico-enterprise/latest/networking/determine-best-networking.mdx)
 guide.
 
 ## Kubernetes Services
@@ -113,8 +113,7 @@ node IP is routable). Return packets on the connection are automatically mapped 
 with the pod IP before forwarding the packet to the pod.
 
 When using {{prodname}}, depending on your environment, you can generally choose whether you prefer to run an
-overlay network, or prefer to have fully routable pod IPs. You can read more about this in the {{prodname}}
-[determine best networking option](/networking/determine-best-networking.mdx) guide. {{prodname}} also
+overlay network, or prefer to have fully routable pod IPs. You can read more about this in the [Calico Enterprise determine best networking option](https://docs.tigera.io/calico-enterprise/latest/networking/determine-best-networking.mdx) guide. {{prodname}} also
 allows you to [configure outgoing NAT](/networking/configuring/workloads-outside-cluster.mdx) for specific IP address
 ranges if more granularity is desired.
 
