--- a/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-kubernetes-egress.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-kubernetes-egress.mdx
@@ -45,7 +45,7 @@ traffic.
 One limitation when using Kubernetes Network Policy to restrict access to specific external resources, is that the external
 resources need to be specified as IP addresses (or IP address ranges) within the policy rules. If the IP addresses
 associated with an external resource change, then every policy that referenced those IP addresses needs to be updated with
-the new IP addresses. This limitation can be circumvented using {{prodname}} [Use external IPs or networks rules in policy](network-policy/policy-rules/external-ips-policy.mdx), or Calico Enterprise's support for domain names in policy rules..
+the new IP addresses. This limitation can be circumvented using {{prodname}} [Use external IPs or networks rules in policy](network-policy/beginners/policy-rules/external-ips-policy), or Calico Enterprise's support for domain names in policy rules..
 
 Note in addition to everything mentioned so far, perimeter firewalls can also be used to restrict outgoing connections,
 for example to allow connections only to particular external IP address ranges, or external services. However, since
@@ -97,7 +97,7 @@ deployments. In these scenarios, using egress gateways is likely to be a better 
 
 ## Above and beyond
 
-- [Use external IPs or networks rules in policy](/network-policy/policy-rules/external-ips-policy.mdx)
+- [Use external IPs or networks rules in policy](network-policy/beginners/policy-rules/external-ips-policy)
 - [Restrict a pod to use an IP address in a specific range](../../networking/ipam/legacy-firewalls.mdx)
 - [Assign IP addresses based on topology](../../networking/ipam/assign-ip-addresses-topology.mdx)
 - [Egress gateways for Calico Enterprise](https://docs.tigera.io/calico-enterprise/latest/networking/egress/)
