--- a/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/kubernetes-demo.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/kubernetes-demo.mdx
@@ -9,8 +9,7 @@ running on Kubernetes. It then configures network policy on each service.
 
 ## Prerequisites
 
-To create a Kubernetes cluster which supports the Kubernetes network policy API, follow
-one of our [getting started guides](../../getting-started/index.mdx).
+A Kubernetes cluster that supports the Kubernetes network policy API.
 
 ## Running the stars example
 
