--- a/calico-cloud_versioned_docs/version-3.16/about/product-comparison.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/product-comparison.mdx
@@ -19,7 +19,7 @@ Includes the {{prodname}} Open Source core networking and network policy, but ad
 
 The SaaS version of {{prodname}} Enterprise. It adds Image Assurance to scan and detect vulnerabilities in images, and container threat defense to detect malware. It also adds onboarding tutorials, and eliminates the cost to manage Elasticsearch logs and storage that comes with Calico Enterprise.
 
-![calico-cloud](/img/calico/calico-cloud.svg)
+![calico-cloud-features](/img/calico-cloud/calico-cloud-features.svg)
 
 What is the best fit for you? It depends on your needs. The following table provides a high-level comparison. 
 
