--- a/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-network-policy.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-network-policy.mdx
@@ -106,7 +106,7 @@ features beyond those supported by Kubernetes network policy. This includes supp
 While Kubernetes network policy applies only to pods, {{prodname}} network policy can be applied to multiple types of
 endpoints including pods, VMs, and host interfaces.
 
-To learn more about {{prodname}} network policies, see [Calico network policy](network-policy/get-started/calico-policy/calico-network-policy.mdx) guide.
+To learn more about {{prodname}} network policies, see [Calico network policy](network-policy/beginners/calico-network-policy.mdx) guide.
 
 ## Benefits of using {{prodname}} for network policy
 
@@ -137,9 +137,9 @@ model to provide [hierarchical policy](#hierarchical-policy).
 
 ### Ability to protect hosts and VMs
 
-As {{prodname}} policies can be enforce on host interfaces, you can use them to protect your Kubernetes nodes (not
+As {{prodname}} policies can be enforced on host interfaces, you can use them to protect your Kubernetes nodes (not
 just your pods), including for example, limiting access to node ports from outside of the cluster. To learn more, check
-out the {{prodname}} [policy for hosts](network-policy/hosts/index.mdx) guides.
+out the [Calico Enterprise policy for hosts](https://docs.tigera.io/calico-enterprise/next/network-policy/hosts/protect-hosts) guides.
 
 ### Extendable with {{prodname}}
 
@@ -198,7 +198,7 @@ spec:
 ### Default deny
 
 One approach to ensuring these best practices are being followed is to define [default
-deny](network-policy/get-started/kubernetes-default-deny.mdx) network policies. These ensure that if no other policy is
+deny](network-policy/beginners/kubernetes-default-deny.mdx) network policies. These ensure that if no other policy is
 defined that explicitly allows traffic to/from a pod, then the traffic will be denied. As a result, anytime a team
 deploys a new pod, they are forced to also define network policy for the pod. It can be useful to use a {{prodname}}
 GlobalNetworkPolicy for this (rather than needing to define a policy every time a new namespace is created) and to
