--- a/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-networking.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/kubernetes-training/about-networking.mdx
@@ -10,8 +10,7 @@ This guide provides optional background education, not specific to {{prodname}}.
 
 :::
 
-You can get up and running with Calico by following any of the {{prodname}} [install
-guides](/getting-started/index.mdx) without needing to be a networking expert. Calico hides the complexities for
+You can get up and running with {{prodname}} without needing to be a networking expert. Calico hides the complexities for
 you. However, if you would like to learn more about networking so you can better understand what is happening under the
 covers, this guide provides a short introduction to some of the key fundamental networking concepts for anyone who is
 not already familiar with them.
@@ -117,8 +116,8 @@ the downsides of:
   are required to bridge between the overlay and the underlay network for any ingress to, or egress from, the overlay.
 
 {{prodname}} networking options are exceptionally flexible, so in general you can choose whether you prefer
-{{prodname}} to provide an overlay network, or non-overlay network. You can read more about this in the {{prodname}}
-[determine best networking option](/networking/determine-best-networking.mdx) guide.
+{{prodname}} to provide an overlay network, or non-overlay network. You can read more about this in the
+[Calico Enterprise determine best networking option](https://docs.tigera.io/calico-enterprise/latest/networking/determine-best-networking.mdx) guide.
 
 ## DNS
 
