--- a/calico-cloud_versioned_docs/version-3.16/about/about-calico-cloud.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/about/about-calico-cloud.mdx
@@ -13,10 +13,13 @@ description: A high-level description of Calico Cloud.
 Beyond the **Kubernetes security** features that you get from Calico Enterprise and Calico Open Source, {{prodname}} adds these **container security** solutions:
 
 - **Image vulnerability management**
-Automated image scanning and blocking so you can monitor and assess workloads for new and existing CVEs 24/7.
 
-- **Runtime container threat defense**
-Fully-automated protection against known and unknown attacks (network or container-based.
+   Image Assurance provides automated image scanning and blocking so you can monitor and assess workloads for new/existing CVEs, 24/7. See [Vulnerability management documentation](/image-assurance/scan-image-registries.mdx).
+
+- **Container threat defense**
+
+    Fully-automated runtime protection against known and unknown attacks (network or container-based). See
+    [Container threat defense documentation](/threat/container-threat-detection.mdx).
 
 ## Best fit
 
@@ -24,7 +27,7 @@ The sweetspot for {{prodname}} is small teams who need to manage the full spectr
 
 - Built-in onboarding tutorials in the web console
 - Automatic policy recommendations to make it easy for developers to secure their microservices and applications from day one
-- Hands-on training from Customer Support during the trial period so your use cases realized in short order
+- Hands-on training from Customer Support during the trial period that targets your use cases  
 - Self-service workshops and training to speed up adoption
 
 ## Need more info?
@@ -33,5 +36,3 @@ The sweetspot for {{prodname}} is small teams who need to manage the full spectr
 - To connect your cluster to {{prodname}} in 15 minutes, [start a free trial](https://auth.calicocloud.io/u/signup/identifier?state=hKFo2SBCQkdVTjZyaXZZUHBZT2FsQnZXb0h2T2pUUkhaeHhWbKFur3VuaXZlcnNhbC1sb2dpbqN0aWTZIFlkZnZqZWY1N3lVN1VMeFA0UUlXdmdPUGNkT0F2M1kxo2NpZNkgc3NJQkNFdEdkZFpLNlVubDNOYWl2ZzhrY2RmcWd6dFE)
 - [Calico Cloud pricing](https://www.tigera.io/tigera-products/calico-cloud-pricing/)
 - [Connect a cluster to {{prodname}} documentation](/get-started/connect/connect-cluster.mdx)
-- [Vulnerability management documentation](/image-assurance/scan-image-registries.mdx)
-- [Container threat defense documentation](/threat/container-threat-detection.mdx)
