Fix yaml errors in the bash code block and fix dead links

--- a/calico-cloud_versioned_docs/version-3.16/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/networking/egress/egress-gateway-aws.mdx
@@ -758,6 +758,7 @@ spec:
           labelSelector:
             matchLabels:
               egress-code: red
+EOF
 ```
 
 - `replicas: 2` tells Kubernetes to schedule two egress gateways in the "red" cluster.
