--- a/calico/reference/host-endpoints/connectivity.mdx
+++ b/calico/reference/host-endpoints/connectivity.mdx
@@ -58,9 +58,13 @@ cat <<EOF | calicoctl create -f -
     - action: Allow
       protocol: TCP
       destination:
-        nets:
-        - "<your etcd IP>/32"
+        nets: [<your etcd IP>/32]
         ports: [<your etcd ports>]
+    - action: Allow
+      protocol: TCP
+      destination:
+        nets: [<your Kubernetes API server IP]
+        ports: [<your Kubernetes API server IP ports>]
     - action: Allow
       protocol: UDP
       destination:
