--- a/calico-cloud/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-aws.mdx
@@ -759,7 +759,9 @@ spec:
           labelSelector:
             matchLabels:
               egress-code: red
+EOF
 ```
+
 
 - `replicas: 2` tells Kubernetes to schedule two egress gateways in the "red" cluster.
 - ipPools tells {{site.prodname}} IPAM to use one of the "red" IP pools: 
