--- a/calico-cloud/reference/host-endpoints/connectivity.mdx
+++ b/calico-cloud/reference/host-endpoints/connectivity.mdx
@@ -57,11 +57,13 @@ cat <<EOF | calicoctl create -f -
     - action: Allow
       protocol: TCP
       destination:
-        nets:
-        - "<your etcd IP>/32"
+        nets: [<your etcd IP>/32]
         ports: [<your etcd ports>]
-        - "<your Kubernetes apiserver IP"
-        ports: [<your Kubernetes apiserver IP ports>]
+    - action: Allow
+      protocol: TCP
+      destination:
+        nets: [<your Kubernetes API server IP]
+        ports: [<your Kubernetes API server IP ports>]
     - action: Allow
       protocol: UDP
       destination:
