--- a/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/getting-started/install-on-clusters/aws.mdx
@@ -103,7 +103,7 @@ To use kOps to create a cluster with {{prodname}} networking and network policy:
 
 1. The default size of the provisioned instance groups for the cluster might not be sufficient for the full installation of kubernetes and {{prodname}}. To increase the size of the instance groups run `kops edit ig <name-of-instance-group-in-your-cluster> --name <name-of-your-cluster>` and edit the following fields accordingly.
 
-   ```yaml
+   ```yaml noValidation
       spec:
          ...
          machineType: t3.medium
