--- a/calico-enterprise_versioned_docs/version-3.16/reference/host-endpoints/connectivity.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/reference/host-endpoints/connectivity.mdx
@@ -34,7 +34,7 @@ appropriate values for your deployment.
 
 <!-- -->
 
-```bash
+```bash 
 cat <<EOF | calicoctl create -f -
 - apiVersion: projectcalico.org/v3
   kind: GlobalNetworkPolicy
@@ -57,11 +57,13 @@ cat <<EOF | calicoctl create -f -
     - action: Allow
       protocol: TCP
       destination:
-        nets:
-        - "<your etcd IP>/32"
+        nets: [<your etcd IP>/32]
         ports: [<your etcd ports>]
-        - "<your Kubernetes apiserver IP"
-        ports: [<your Kubernetes apiserver IP ports>]
+    - action: Allow
+      protocol: TCP
+      destination:
+        nets: [<your Kubernetes API server IP]
+        ports: [<your Kubernetes API server IP ports>]
     - action: Allow
       protocol: UDP
       destination:
