--- a/calico/getting-started/kubernetes/openshift/installation.mdx
+++ b/calico/getting-started/kubernetes/openshift/installation.mdx
@@ -143,7 +143,7 @@ EOF
 
 Next, you will create a Subscription to the operator. By subscribing to the operator package, the {{prodname}} operator will be managed by OLM.
 
-```bash
+```bash noValidation
 oc apply -f - <<EOF
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
