[CORE-9615]: Add warning about EIPs and public IPs. (#602)
Co-authored-by: Lance Robson <lance@tigera.io>

--- a/calico-cloud/networking/egress/egress-gateway-aws.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-aws.mdx
@@ -79,7 +79,7 @@ way have the normal AWS semantics: when accessing resources inside the AWS netwo
 (from the IP pool) is used. When accessing resources outside the AWS network, AWS translates the workload's IP to
 the Elastic IP. Elastic IPs also allow for incoming requests from outside the AWS fabric, direct to the workload.
 
-In overview, the AWS-backed feature works as follows:
+In overview, the AWS-backed IP Pools feature works as follows:
 
 - An IP pool is created with its `awsSubnetID` field set to the ID of a VPC subnet. This "AWS-backed" IP pool's
   CIDR must be contained within the VPC subnet's CIDR.
@@ -991,6 +991,15 @@ If you attempt to apply an egress gateway policy that has not been created, {{pr
 ### Add AWS Elastic IPs to the egress gateway deployment
 
 To add AWS Elastic IPs to the egress gateway pods, follow these steps:
+
+- Ensure that your worker nodes are either in a private subnet, or they are using Elastic IPs for their public IP.
+
+  :::warning
+  If your worker nodes are using ["standard" VPC public IPs](https://docs.aws.amazon.com/vpc/latest/userguide/vpc-ip-addressing.html#vpc-public-ipv4-addresses),
+  adding the Elastic IP to the node triggers the node to lose its VPC Public IP. This is because in AWS networking,
+  a node is not allowed to have a VPC public IP and an Elastic IP. However, we have found this is only enforced at
+  boot time.
+  :::
 
 - Ensure that your VPC has an [Internet Gateway](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Internet_Gateway.html)
   and a (default) route to the Internet Gateway from the AWS subnets used for egress gateways. (This is a
