--- a/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
@@ -4,10 +4,17 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
+## 2 May, 2023
+
+### General improvements and bug fixes
+
+This release includes a number of performance improvements and bug fixes.
 
 ## 24 April, 2023
 
 ### Depreciated support for RKE, RKE2
+
+Calico Cloud no longer supports installation on RKE or RKE2.
 
 ## April 11, 2023
 
