Apply to all versions.

--- a/calico-cloud/visibility/elastic/flow/datatypes.mdx
+++ b/calico-cloud/visibility/elastic/flow/datatypes.mdx
@@ -90,6 +90,8 @@ Where,
   * `<namespace>/<name>` for Kubernetes `NetworkPolicy`.
   * `<namespace>/<tier>.<name>` for {{prodname}} `NetworkPolicy`.
 
+  Staged policy names are prefixed with "staged:".
+
 * `<action>` is the action performed by the rule; one of `allow`, `deny`, `pass`.
 * `<rule index>` if non-negative, is the index of the rule that was matched within the policy, starting with 0.
   Otherwise, a special value:
