--- a/calico-cloud_versioned_docs/version-3.16/visibility/elastic/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/visibility/elastic/overview.mdx
@@ -55,7 +55,7 @@ You control user access to logs using the standard Kubernetes RBAC cluster role 
 
 ```yaml
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: bob-es-access
 subjects:
